retoques de revision
6:07pm revisado por marleny

--- a/alianzas.html
+++ b/alianzas.html
@@ -77,7 +77,7 @@
       <div class="row justify-content-around">
 
         <div class="col-12 mb-3 text-center title font-weight-bold">
-          <p class="text-uppercase">Alianzas Nacionales</p>
+          <p class="text-uppercase">Alianzas Nacionales con unidades estrategicas de negocio San cipriano - Córdoba - Santa Elena</p>
         </div>
 
         <!-- Div col -->
@@ -312,7 +312,7 @@
         </div>
 
         <!-- Div col -->
-        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+        <!-- <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
               <a href="img/alianza/hotel lucia/1.jpg" data-featherlight="image"><img class="cabecita img-fluid" src="img/alianza/hotel lucia/1.jpg"></a>
@@ -334,7 +334,7 @@
                 fotos</button>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- Div col -->
         <!-- <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
@@ -1075,7 +1075,7 @@
       </div>
     </div>
     <!-- lucia -->
-    <div class="modal fade" id="lucia" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- <div class="modal fade" id="lucia" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -1095,7 +1095,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- peña_azul -->
     <!-- <div class="modal fade" id="peña_azul" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
