--- a/cultura.html
+++ b/cultura.html
@@ -75,7 +75,7 @@
 
     <section>
         <div class="container">
-            <h2 class="title text-center">Cultura del pacífico</h2>
+            <h2 class="title text-center">Cultura del Pacífico</h2>
 
             <div class="row">
                 <div class="col-12 mb-4">
