--- a/gastronomia.html
+++ b/gastronomia.html
@@ -79,7 +79,7 @@
                     <div class="container row">
                         <div class="col-12 text-center">
 
-                            <h3 class="title">Gastronomia del pacífico</h3>
+                            <h3 class="title">Gastronomia del Pacífico</h3>
                             <p class="text-justify">La gastronomía de la región Pacífica de Colombia está basada sobre
                                 todo en
                                 pescados y mariscos, debido a la cercanía de la zona al mar.
@@ -107,7 +107,7 @@
                 <div class="row d-flex align-items-center">
 
                     <div class="col tarjeta5">
-                        <h4>Ecocado de camarón</h4>
+                        <h4>Encocado de camarón</h4>
                         <p>
                             El encocado de camarón es una preparación tipica de san cipriano y de la región pacífica de
                             Colombia</p>
@@ -131,8 +131,8 @@
                     <div class="w-100"></div>
 
                     <div class="col tarjeta5">
-                        <h4>Sopa de jaiba</h4>
-                        <p>La sopa de jaiba nos muestra una interesante mezcla de sabores, que nos recuerda el Pacífico
+                        <h4>Encocado de jaiba</h4>
+                        <p>El encocado de jaiba nos muestra una interesante mezcla de sabores, que nos recuerda el Pacífico
                             Colombiano. Las técnicas de cocción en esta sopa, incorporando el frito, el guiso y el
                             cocido, son un fiel testimonio del origen de esta receta; el achiote le da un color rojo y
                             con carácter, no te aguantarás las ganas de devorarte esta delicia.</p>
