--- a/acerca.html
+++ b/acerca.html
@@ -205,29 +205,30 @@
 
                 <div class="row mt-5">
                     <div class="col">
+                        <h2 class="title text-center">Directivos, Comites y Asociados "COOMUTRANSTUR"</h2>
                         <div class="galery_container row d-flex justify-content-center">
 
                             <figure class="figure text-center">
-                                <img src="img/nosotros/albeiro.jpg" alt="" srcset="" class="img_adaptada2 lazy">
-                                <figcaption class="figure-caption">Albeiro Caicedo Hurtado</figcaption>
+                                <img src="img/nosotros/virgilio.jpg" alt="" srcset="" class="img_adaptada2 lazy">
+                                <figcaption class="figure-caption">Luis Virgilio Otero</figcaption>
+                                <!-- <span class="text-dark">Representante Legal</span> -->
                             </figure>
                             <figure class="figure text-center">
-                                <img src="img/nosotros/n1.jpg" alt="" srcset="" class="img_adaptada2 lazy">
-                                <figcaption class="figure-caption">...</figcaption>
+                                <img src="img/nosotros/albeiro.jpg" alt="" srcset="" class="img_adaptada2 lazy">
+                                <figcaption class="figure-caption">Albeiro Caicedo Hurtado</figcaption>
                             </figure>
                             <figure class="figure text-center">
                                 <img src="img/nosotros/orlando.jpg" alt="" srcset="" class="img_adaptada2 lazy">
                                 <figcaption class="figure-caption">Orlando Valencia</figcaption>
                             </figure>
                             <figure class="figure text-center">
-                                <img src="img/nosotros/rolando.jpg" alt="" srcset="" class="img_adaptada2 lazy">
-                                <figcaption class="figure-caption">Rolando Rivas Arboleda</figcaption>
-                                <span class="text-dark">Lider Comunitario</span>
+                                <img src="img/nosotros/n1.jpg" alt="" srcset="" class="img_adaptada2 lazy">
+                                <figcaption class="figure-caption">Luis</figcaption>
                             </figure>
                             <figure class="figure text-center">
-                                <img src="img/nosotros/virgilio.jpg" alt="" srcset="" class="img_adaptada2 lazy">
-                                <figcaption class="figure-caption">Luis Virgilio Otero</figcaption>
-                                <span class="text-dark">Representante Legal</span>
+                                <img src="img/nosotros/rolando.jpg" alt="" srcset="" class="img_adaptada2 lazy">
+                                <figcaption class="figure-caption">Rolando Rivas Arboleda</figcaption>
+                                <!-- <span class="text-dark">Lider Comunitario</span> -->
                             </figure>
 
                         </div>
@@ -244,12 +245,26 @@
                         <h4 class="title text-center text-uppercase">Sección de educación/recuperación del patrimonio
                             cultural, valores, ciudadanía y apropiación territorial</h4>
 
+                            <div class="row text-center mt-4 mb-4">
+                                <h4 class="w-100 title2">Aliados estrategicos</h4>
+                                <div class="col">
+                                    <a target="_blank" href="http://afrocolombianosvisibles.blogspot.com/">
+                                        <h5 class="">afrocolombianosvisibles</h5>
+                                    </a>
+                                </div>
+                                <div class="col">
+                                    <a target="_blank" href="http://centrodeestudiospoliticos.blogspot.com/">
+                                        <h5>Centro de Estudios Políticos y Sociales del Pueblo Afrocolombiano, CEPSAFRO</h5>
+                                    </a>
+                                </div>
+                            </div>
+
                         <h5>¿Qué es una cooperativa, sus características y tipos de cooperativas?</h5>
                         <p>La empresa asociativa sin ánimo de lucro, en la cual los trabajadores o los usuarios,
                             según el caso, son simultáneamente los aportantes y los gestores de la empresa, creada con
                             el objeto de producir o distribuir conjunta y eficientemente bienes o servicios para
                             satisfacer las necesidades de sus asociados y de la comunidad en general.</p>
-                        <a href="http://www.orgsolidarias.gov.co/qu%C3%A9-es-una-cooperativa-y-c%C3%B3mo-se-conforma"><span
+                        <a target="_blank" href="http://www.orgsolidarias.gov.co/qu%C3%A9-es-una-cooperativa-y-c%C3%B3mo-se-conforma"><span
                                 class="float-right">Organizaciones Solidarias - Repúlica de Colombia</span></a>
 
                         <br><br>
@@ -278,7 +293,7 @@
 
 
                         <img src="" alt="">
-                        <a href="http://prototipo.ccpasto.org.co/index.php/registro-entidades-privadas-sin-animo-de-lucro-epsal/55-5-modelos-actas-de-constitucion/213-5-acta-de-constitucion-cooperativa-de-trabajo-asociado?hitcount=0"><span
+                        <a target="_blank" href="http://prototipo.ccpasto.org.co/index.php/registro-entidades-privadas-sin-animo-de-lucro-epsal/55-5-modelos-actas-de-constitucion/213-5-acta-de-constitucion-cooperativa-de-trabajo-asociado?hitcount=0"><span
                                 class="float-right">Acta de Constitución Cooperativa de Trabajo Asociado</span></a>
 
                         <br><br>
@@ -429,6 +444,13 @@
                             <li>Vigencia de los estatutos</li>
 
                         </ol>
+                        <br><br>
+                        <h5 class="title2">Lecciones aprendidas por parte de la comunidad y las organizaciones asentadas en el
+                            territorio</h5>
+                        <p>Esta experiencia me ha enseñado que estar unidos y organizados hace que todo sea mas
+                            sencillo rentable.</p>
+                        <span class="text-dark float-right">Fredy Arboleda</span>
+
 
                         <br><br>
                         <h5>¿Qué es trabajo decente?</h5>
@@ -437,13 +459,22 @@
                             digno</p>
 
                         <br><br>
-                        <h5>¿Qué significado tiene el patrimonio cultural del afro del pacifico colombiano?</h5>
+                        <h5>¿Qué significado tiene el patrimonio cultural afro del pacifico colombiano?</h5>
+                        <P>Patrimonio cultural del afro del pacÍfico significa todas y cada una de las costumbres
+                            heredadas de nuestros antepasados y que son las que nos diferencian de otras regiones por
+                            ser partes de nuestro acervo biológico y espiritual.</P>
+                        <span class="text-dark float-right">Fredy Arboleda</span>
 
+                        <br><br>
                         <h5>¿Por qué San Cipriano, Córdoba y Santa Elena representan un corredor ecoturístico para el
                             mundo?</h5>
+                        <p>Porque son zonas o sitios rodeados de gran riqueza biodiversa , pero de además de encontrar
+                            un sin número de especies tanto de flora como de fauna son zonas sumamente ricas en
+                            fuentes hídricas; también es preciso mencionar el gran carisma y amabilidad de sus
+                            habitantes.</p>
+                        <span class="text-dark float-right">Fredy Arboleda</span>
 
-                        <h5>Lecciones aprendidas por parte de la comunidad y las organizaciones asentadas en te
-                            territorio</h5>
+                        <br><br>
 
                     </div>
                 </div>
