--- a/acerca.html
+++ b/acerca.html
@@ -26,8 +26,8 @@
                 <!-- menu -->
                 <nav class="row navbar navbar-expand-sm bg-white">
                     <div class="col">
-                        <a class="navbar-brand ml-3 text-green d-none d-sm-block" href="index.html"><span class="title font-weight-bold">Coomutranstur</span><br></a>
-                        <a class="navbar-brand ml-3 text-green d-block d-sm-none" href="index.html"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
+                        <a class="navbar-brand ml-3 text-green d-none d-sm-block" href="/"><span class="title font-weight-bold">Coomutranstur</span><br></a>
+                        <a class="navbar-brand ml-3 text-green d-block d-sm-none" href="/"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
                     </div>
                     <div class="col d-none d-md-inline-block">
                         <ul class="navbar-nav mt-2 float-right">
@@ -53,17 +53,21 @@
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                         <ul class="navbar-nav mt-2 mt-lg-0 mr-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Inicio</a>
+                                <a class="nav-link" href="/">Inicio</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="turismo.html">Guía turística</a>
+                                <a class="nav-link" href="turismo">Guía turística</a>
                             </li>
                             <li class="nav-item active">
                                 <a class="nav-link" href="#">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
+                                <a class="nav-link" href="alianzas">Alianzas Estratégicas</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#!">Angeles Inversores</a>
+                            </li>
+
                         </ul>
                     </div>
                 </nav>
@@ -245,19 +249,19 @@
                         <h4 class="title text-center text-uppercase">Sección de educación/recuperación del patrimonio
                             cultural, valores, ciudadanía y apropiación territorial</h4>
 
-                            <div class="row text-center mt-4 mb-4">
-                                <h4 class="w-100 title2">Aliados estrategicos</h4>
-                                <div class="col">
-                                    <a target="_blank" href="http://afrocolombianosvisibles.blogspot.com/">
-                                        <h5 class="">afrocolombianosvisibles</h5>
-                                    </a>
-                                </div>
-                                <div class="col">
-                                    <a target="_blank" href="http://centrodeestudiospoliticos.blogspot.com/">
-                                        <h5>Centro de Estudios Políticos y Sociales del Pueblo Afrocolombiano, CEPSAFRO</h5>
-                                    </a>
-                                </div>
+                        <div class="row text-center mt-4 mb-4">
+                            <h4 class="w-100 title2">Aliados estrategicos</h4>
+                            <div class="col">
+                                <a target="_blank" href="http://afrocolombianosvisibles.blogspot.com/">
+                                    <h5 class="">afrocolombianosvisibles</h5>
+                                </a>
                             </div>
+                            <div class="col">
+                                <a target="_blank" href="http://centrodeestudiospoliticos.blogspot.com/">
+                                    <h5>Centro de Estudios Políticos y Sociales del Pueblo Afrocolombiano, CEPSAFRO</h5>
+                                </a>
+                            </div>
+                        </div>
 
                         <h5>¿Qué es una cooperativa, sus características y tipos de cooperativas?</h5>
                         <p>La empresa asociativa sin ánimo de lucro, en la cual los trabajadores o los usuarios,
@@ -445,7 +449,8 @@
 
                         </ol>
                         <br><br>
-                        <h5 class="title2">Lecciones aprendidas por parte de la comunidad y las organizaciones asentadas en el
+                        <h5 class="title2">Lecciones aprendidas por parte de la comunidad y las organizaciones
+                            asentadas en el
                             territorio</h5>
                         <p>Esta experiencia me ha enseñado que estar unidos y organizados hace que todo sea mas
                             sencillo rentable.</p>
