--- a/cultura.html
+++ b/cultura.html
@@ -26,8 +26,8 @@
                 <!-- menu -->
                 <nav class="row navbar navbar-expand-sm bg-white">
                     <div class="col">
-                        <a class="navbar-brand ml-3 text-green d-none d-sm-block" href="index.html"><span class="title font-weight-bold">Coomutranstur</span><br></a>
-                        <a class="navbar-brand ml-3 text-green d-block d-sm-none" href="index.html"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
+                        <a class="navbar-brand ml-3 text-green d-none d-sm-block" href="/"><span class="title font-weight-bold">Coomutranstur</span><br></a>
+                        <a class="navbar-brand ml-3 text-green d-block d-sm-none" href="/"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
                     </div>
                     <div class="col d-none d-md-inline-block">
                         <ul class="navbar-nav mt-2 float-right">
@@ -53,17 +53,21 @@
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                         <ul class="navbar-nav mt-2 mt-lg-0 mr-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Inicio</a>
+                                <a class="nav-link" href="/">Inicio</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="turismo.html">Guía turística</a>
+                                <a class="nav-link" href="turismo">Guía turística</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="acerca.html">Nosotros</a>
+                                <a class="nav-link" href="acerca">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
+                                <a class="nav-link" href="alianzas">Alianzas Estratégicas</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#!">Angeles Inversores</a>
+                            </li>
+
                         </ul>
                     </div>
                 </nav>
