--- a/cultura.html
+++ b/cultura.html
@@ -67,6 +67,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#!">Angeles Inversores</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="educacion">Educación y formación ciudadana</a>
+                            </li>
 
                         </ul>
                     </div>
