--- a/alianzas.html
+++ b/alianzas.html
@@ -1518,7 +1518,7 @@
   <section id="footer" class="mt-4">
     <div class="row">
       <div class="col-12 text-center">
-        <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
+        <p>COOPERATIVA MULTIACTIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
       </div>
       <div class="col-12 text-center">
         <p>Buenaventura / Valle del Cauca / Colombia</p>
