--- a/gastronomia.html
+++ b/gastronomia.html
@@ -176,7 +176,7 @@
     <!-- Footer  -->
     <div id="footer" class="row">
         <div class="col-12 text-center">
-            <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
+            <p>COOPERATIVA MULTIACTIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
         </div>
         <div class="col-12 text-center">
             <p>Buenaventura / Valle del Cauca / Colombia</p>
